// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecordingTab.vue it has the correct pristine / empty state 1`] = `
<section
  class="flex flex-col items-center rounded-md pt-8 h-full"
>
  <div
    class="flex text-2xl justify-center items-center text-red font-semibold animate-pulse w-1/3"
    data-test-id="recording-badge"
    v-show="false"
  >
    Recording...
  </div>
  <p
    class="text-gray-dark text-sm text-center w-72 dark:text-gray-light"
  >
     Headless recorder currently recording your browser events. 
  </p>
  <button
    class="p-2 bg-white rounded-full border-gray-light border-solid border-4 hover:bg-gray-lightest dark:hover:bg-gray-hover dark:bg-black-shady dark:border-gray-dark p-12 mt-10"
  >
    
    <div
      class="bg-gray-darkest rounded h-16 w-16 dark:bg-white"
    />
    
  </button>
  <div
    class="flex mt-13 mb-8 items-center justify-center"
  >
    <div
      class="flex flex-col items-center justify-center mr-10"
    >
      <button
        class="p-2 bg-white rounded-full border-gray-light border-solid border-4 hover:bg-gray-lightest dark:hover:bg-gray-hover dark:bg-black-shady dark:border-gray-dark btn-medium flex flex-col items-center justify-center"
      >
        
        <img
          alt="resume recording"
          class="w-10 h-10"
          src="/icons/light/play.svg"
          style="display: none;"
        />
        <img
          alt="pause recording"
          class="w-10 h-10"
          src="/icons/light/pause.svg"
        />
        
      </button>
      <span
        class="mt-2 text-sm font-semibold text-gray-new"
      >
        PAUSE
      </span>
    </div>
    <div
      class="flex flex-col items-center justify-center"
    >
      <button
        class="p-2 bg-white rounded-full border-gray-light border-solid border-4 hover:bg-gray-lightest dark:hover:bg-gray-hover dark:bg-black-shady dark:border-gray-dark btn-medium flex flex-col items-center justify-center"
      >
        
        <img
          alt="restart recording"
          class="w-10 h-10"
          src="/icons/light/sync.svg"
        />
        
      </button>
      <span
        class="mt-2 text-sm font-semibold text-gray-new"
      >
        RESTART
      </span>
    </div>
  </div>
</section>
`;

exports[`RecordingTab.vue it has the correct recording DOM events state 1`] = `
<section
  class="flex flex-col items-center rounded-md pt-8 h-full"
  liveevents="[object Object]"
>
  <div
    class="flex text-2xl justify-center items-center text-red font-semibold animate-pulse w-1/3"
    data-test-id="recording-badge"
    v-show="true"
  >
    Recording...
  </div>
  <p
    class="text-gray-dark text-sm text-center w-72 dark:text-gray-light"
  >
     Headless recorder currently recording your browser events. 
  </p>
  <button
    class="p-2 bg-white rounded-full border-gray-light border-solid border-4 hover:bg-gray-lightest dark:hover:bg-gray-hover dark:bg-black-shady dark:border-gray-dark p-12 mt-10"
  >
    
    <div
      class="bg-gray-darkest rounded h-16 w-16 dark:bg-white"
    />
    
  </button>
  <div
    class="flex mt-13 mb-8 items-center justify-center"
  >
    <div
      class="flex flex-col items-center justify-center mr-10"
    >
      <button
        class="p-2 bg-white rounded-full border-gray-light border-solid border-4 hover:bg-gray-lightest dark:hover:bg-gray-hover dark:bg-black-shady dark:border-gray-dark btn-medium flex flex-col items-center justify-center"
      >
        
        <img
          alt="resume recording"
          class="w-10 h-10"
          src="/icons/light/play.svg"
          style="display: none;"
        />
        <img
          alt="pause recording"
          class="w-10 h-10"
          src="/icons/light/pause.svg"
        />
        
      </button>
      <span
        class="mt-2 text-sm font-semibold text-gray-new"
      >
        PAUSE
      </span>
    </div>
    <div
      class="flex flex-col items-center justify-center"
    >
      <button
        class="p-2 bg-white rounded-full border-gray-light border-solid border-4 hover:bg-gray-lightest dark:hover:bg-gray-hover dark:bg-black-shady dark:border-gray-dark btn-medium flex flex-col items-center justify-center"
      >
        
        <img
          alt="restart recording"
          class="w-10 h-10"
          src="/icons/light/sync.svg"
        />
        
      </button>
      <span
        class="mt-2 text-sm font-semibold text-gray-new"
      >
        RESTART
      </span>
    </div>
  </div>
</section>
`;

exports[`RecordingTab.vue it has the correct recording Puppeteer custom events state 1`] = `
<section
  class="flex flex-col items-center rounded-md pt-8 h-full"
  liveevents="[object Object],[object Object],[object Object]"
>
  <div
    class="flex text-2xl justify-center items-center text-red font-semibold animate-pulse w-1/3"
    data-test-id="recording-badge"
    v-show="true"
  >
    Recording...
  </div>
  <p
    class="text-gray-dark text-sm text-center w-72 dark:text-gray-light"
  >
     Headless recorder currently recording your browser events. 
  </p>
  <button
    class="p-2 bg-white rounded-full border-gray-light border-solid border-4 hover:bg-gray-lightest dark:hover:bg-gray-hover dark:bg-black-shady dark:border-gray-dark p-12 mt-10"
  >
    
    <div
      class="bg-gray-darkest rounded h-16 w-16 dark:bg-white"
    />
    
  </button>
  <div
    class="flex mt-13 mb-8 items-center justify-center"
  >
    <div
      class="flex flex-col items-center justify-center mr-10"
    >
      <button
        class="p-2 bg-white rounded-full border-gray-light border-solid border-4 hover:bg-gray-lightest dark:hover:bg-gray-hover dark:bg-black-shady dark:border-gray-dark btn-medium flex flex-col items-center justify-center"
      >
        
        <img
          alt="resume recording"
          class="w-10 h-10"
          src="/icons/light/play.svg"
          style="display: none;"
        />
        <img
          alt="pause recording"
          class="w-10 h-10"
          src="/icons/light/pause.svg"
        />
        
      </button>
      <span
        class="mt-2 text-sm font-semibold text-gray-new"
      >
        PAUSE
      </span>
    </div>
    <div
      class="flex flex-col items-center justify-center"
    >
      <button
        class="p-2 bg-white rounded-full border-gray-light border-solid border-4 hover:bg-gray-lightest dark:hover:bg-gray-hover dark:bg-black-shady dark:border-gray-dark btn-medium flex flex-col items-center justify-center"
      >
        
        <img
          alt="restart recording"
          class="w-10 h-10"
          src="/icons/light/sync.svg"
        />
        
      </button>
      <span
        class="mt-2 text-sm font-semibold text-gray-new"
      >
        RESTART
      </span>
    </div>
  </div>
</section>
`;

exports[`RecordingTab.vue it has the correct waiting for events state 1`] = `
<section
  class="flex flex-col items-center rounded-md pt-8 h-full"
>
  <div
    class="flex text-2xl justify-center items-center text-red font-semibold animate-pulse w-1/3"
    data-test-id="recording-badge"
    v-show="true"
  >
    Recording...
  </div>
  <p
    class="text-gray-dark text-sm text-center w-72 dark:text-gray-light"
  >
     Headless recorder currently recording your browser events. 
  </p>
  <button
    class="p-2 bg-white rounded-full border-gray-light border-solid border-4 hover:bg-gray-lightest dark:hover:bg-gray-hover dark:bg-black-shady dark:border-gray-dark p-12 mt-10"
  >
    
    <div
      class="bg-gray-darkest rounded h-16 w-16 dark:bg-white"
    />
    
  </button>
  <div
    class="flex mt-13 mb-8 items-center justify-center"
  >
    <div
      class="flex flex-col items-center justify-center mr-10"
    >
      <button
        class="p-2 bg-white rounded-full border-gray-light border-solid border-4 hover:bg-gray-lightest dark:hover:bg-gray-hover dark:bg-black-shady dark:border-gray-dark btn-medium flex flex-col items-center justify-center"
      >
        
        <img
          alt="resume recording"
          class="w-10 h-10"
          src="/icons/light/play.svg"
          style="display: none;"
        />
        <img
          alt="pause recording"
          class="w-10 h-10"
          src="/icons/light/pause.svg"
        />
        
      </button>
      <span
        class="mt-2 text-sm font-semibold text-gray-new"
      >
        PAUSE
      </span>
    </div>
    <div
      class="flex flex-col items-center justify-center"
    >
      <button
        class="p-2 bg-white rounded-full border-gray-light border-solid border-4 hover:bg-gray-lightest dark:hover:bg-gray-hover dark:bg-black-shady dark:border-gray-dark btn-medium flex flex-col items-center justify-center"
      >
        
        <img
          alt="restart recording"
          class="w-10 h-10"
          src="/icons/light/sync.svg"
        />
        
      </button>
      <span
        class="mt-2 text-sm font-semibold text-gray-new"
      >
        RESTART
      </span>
    </div>
  </div>
</section>
`;
